--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
-    background-color: aquamarine;
+    background-color: chartreuse;
     color: bisque;
 }
 
 h1{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, sserif;
 }
